--- a/src/pages/tools.astro
+++ b/src/pages/tools.astro
@@ -258,6 +258,7 @@ const jsonLd = {
 					<li><a href="/strategies">Strategies</a></li>
 					<li><a href="/tools">Tools</a></li>
 					<li><a href="/model-connectivity">Connectivity</a></li>
+					<li><a href="/learn">Learning Center</a></li>
 					<li><a href="/blog">Blog</a></li>
 				</ul>
 			</nav>
