--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -279,7 +279,7 @@ const canonicalURL = "https://aiperformanceoptimization.com/blog";
 					<li><a href="/strategies">Strategies</a></li>
 					<li><a href="/tools">Tools</a></li>
 					<li><a href="/model-connectivity">Connectivity</a></li>
-
+					<li><a href="/learn">Learning Center</a></li>
 					<li><a href="/blog">Blog</a></li>
 				</ul>
 			</nav>
