--- a/src/pages/strategies.astro
+++ b/src/pages/strategies.astro
@@ -214,7 +214,7 @@ const canonicalURL = "https://aiperformanceoptimization.com/strategies";
 					<li><a href="/strategies">Strategies</a></li>
 					<li><a href="/tools">Tools</a></li>
 					<li><a href="/model-connectivity">Connectivity</a></li>
-
+					<li><a href="/learn">Learning Center</a></li>
 					<li><a href="/blog">Blog</a></li>
 				</ul>
 			</nav>
